Fixed post's css bottom scrollbar problem and how it deal with images

--- a/static/styles.css
+++ b/static/styles.css
@@ -98,11 +98,13 @@ a {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    max-width: 100%;
 }
 
 #footer {
     width: 100%;
-    padding: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
     color: white;
     font-family: VCR OSD Mono;
     text-align: center;
